# CGeneralRepo

./: CMakeLists.txt  LICENSE.md  README.md
CFirst/: Arithmetic.c  ArithmeticComparingInt.c  CMakeLists.txt  Initials.c  OddEven.c
CIntro/: CMakeLists.txt  CheckerboardPattern.c  Initials.c  IntegerValueOfCharacter.c  Multiples.c  PrintingValues.c  SeparatingDigitsInteger.c  ShapesWithAsterisks.c  TableSquaresCubes.c
CProgramControl/: CMakeLists.txt
CStructuredProgrammingDev/: CMakeLists.txt  CheckerboardPatternOfAsterisks.c  CountingSevens.c  CreditLimitCalculator.c  DetectingMultiplesOfTen.c  DiameterCircumferenceAndAreaOfACirle.c  FactorialAlpha.c  FindTheLargestNumber.c  GasMileage.c  HollowSquareofAsterisks.c  InterestCalculator.c  MultiplesOfTowWithAnInfiniteLoop.c  PalindromeTester.c  PrePostDecrementing.c  PrintingNumbersFromALoop.c  PrintingTheDecimalEquivalentOfABinaryNumber.c  SalaryCalculator.c  SalesCommissionCalculator.c  SidesOfATriangle.c  SquareofAsterisks.c  TabularOutput.c  TabularOutputOne.c  TabularOutputTwo.c  ValidatingUserInput.c
first/: Arithmetic.c  CMakeLists.txt  CircleCalc.c  LargestSmalest.c
second/: CMakeLists.txt
