# Add executables.
# The extensions are automatically found.
add_executable(Arithmetic Arithmetic.c)
add_executable(ComparingIntegers ComparingIntegers.c)
add_executable(PrintingValues PrintingValues.c)
add_executable(ArithmeticComparingInt ArithmeticComparingInt.c)
add_executable(CircleCalc CircleCalc.c)
add_executable(ShapesWithAsterisks ShapesWithAsterisks.c)
add_executable(LargestSmalest LargestSmalest.c)
add_executable(OddEven OddEven.c)
add_executable(Initials Initials.c)
add_executable(Multiples Multiples.c)
add_executable(CheckerboardPattern CheckerboardPattern.c)
add_executable(IntegerValueOfCharacter IntegerValueOfCharacter.c)
add_executable(SeparatingDigitsInteger SeparatingDigitsInteger.c)
add_executable(TableSquaresCubes TableSquaresCubes.c)