# Add executables.
# The extensions are automatically found.

add_executable(GasMileage GasMileage.c)
add_executable(CreditLimitCalculator CreditLimitCalculator.c)
add_executable(SalesCommissionCalculator SalesCommissionCalculator.c)
add_executable(InterestCalculator InterestCalculator.c)
add_executable(SalaryCalculator SalaryCalculator.c)
add_executable(PrePostDecrementing PrePostDecrementing.c)
add_executable(PrintingNumbersFromALoop PrintingNumbersFromALoop.c)
add_executable(FindTheLargestNumber FindTheLargestNumber.c)
add_executable(TabularOutput TabularOutput.c)