# Add executables.
# The extensions are automatically found.

add_executable(GasMileage GasMileage.c)
add_executable(CreditLimitCalculator CreditLimitCalculator.c)
add_executable(SalesCommissionCalculator SalesCommissionCalculator.c)
add_executable(InterestCalculator InterestCalculator.c)
add_executable(SalaryCalculator SalaryCalculator.c)
add_executable(PrePostDecrementing PrePostDecrementing.c)
add_executable(PrintingNumbersFromALoop PrintingNumbersFromALoop.c)
add_executable(FindTheLargestNumber FindTheLargestNumber.c)
add_executable(TabularOutput TabularOutputOne.c)
add_executable(TabularOutputTwo TabularOutputTwo.c)
add_executable(ValidatingUserInput ValidatingUserInput.c)
add_executable(SquareofAsterisks SquareofAsterisks.c)
add_executable(HollowSquareofAsterisks HollowSquareofAsterisks.c)
add_executable(PalindromeTester PalindromeTester.c)
add_executable(PrintingTheDecimalEquivalentOfABinaryNumber PrintingTheDecimalEquivalentOfABinaryNumber.c)