# Add executable called "CGeneralRepo" that is built from the source files
# "Arithmetic.c". The extensions are automatically found.
add_executable(Arithmetic Arithmetic.c)
add_executable(ComparingIntegers ComparingIntegers.c)
add_executable(PrintingValues PrintingValues.c)
add_executable(ArithmeticComparingInt ArithmeticComparingInt.c)
add_executable(CircleCalc CircleCalc.c)
add_executable(ShapesWithAsterisks ShapesWithAsterisks.c)